apps/devops-app/base/shared/validating-admission-policies/deployment-policies.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: deployment-policies
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
      - apiGroups: ["apps"]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["deployments"]
  validations:
    # Enforce Resource Requests and Limits for Deployments
    - expression: "object.spec.template.spec.containers.all(container, container.resources.requests != null && container.resources.limits != null)"
      message: "Deployments must specify both resource requests and limits."

    # Enforce Mandatory Readiness and Liveness Probes for Deployments
    - expression: "object.spec.template.spec.containers.all(container, container.readinessProbe != null && container.livenessProbe != null)"
      message: "Deployments must have readiness and liveness probes defined."

    - expression: "!(object.spec.template.spec.containers.all(container, container.image.matches('.*-latest$')))"
      message: "Using the 'latest' tag is discouraged. Consider using a version-specific tag."
